bug fixed: on Google Chrome (Linux), fieldsets were center aligned in administration
git-svn-id: http://piwigo.org/svn/trunk@6000 68402e56-0260-453c-a942-63ccdbb3a9ee

--- a/admin/themes/default/default-layout.css
+++ b/admin/themes/default/default-layout.css
@@ -881,3 +881,5 @@ h2:lang(en) { text-transform:capitalize; }
 .HelpActions a { border:0; margin:0; }
 .HelpActions a:hover {border:0;}
 .HelpActions li {list-style-image:none; list-style-position:outside; list-style-type:none; text-align:center; text-indent:0pt; }
+
+legend {text-align:left;}
